--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera!</h1>   
+<div>Hello Coursera! Great Day</div>
+<div>
+    This is my Page
+    <span>:Arjun's</span>
+</div>
+<div>Have Fun :)</div>   
 </body>
 </html>
